k8s/apps/devops-app/base/policies/bindings/enforce-container-port-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: enforce-container-port-binding
spec:
  policyName: enforce-container-port
  matchResources:
    objectSelector:
      matchLabels:
        app.kubernetes.io/name: "devops-app-backend"
        app.kubernetes.io/name: "devops-app-frontend"
  validationActions:
    - Deny
