k8s/apps/devops-app/base/policies/bindings/enforce-resource-labels-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: enforce-resource-labels-binding
spec:
  policyName: enforce-resource-labels
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - devops-app
  validationActions:
    - Deny
