k8s/apps/devops-app/base/policies/bindings/enforce-resource-limits-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: enforce-resource-limits-binding
spec:
  policyName: enforce-resource-limits
  matchResources:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]
        operations: ["CREATE", "UPDATE"]
        scope: "Namespaced"
    objectSelector:
      matchLabels:
        app.kubernetes.io/name: devops-app-backend
        app.kubernetes.io/name: devops-app-frontend
  validationActions:
    - Deny
