k8s/apps/devops-app/base/policies/bindings/warn-on-image-pull-secrets-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: warn-on-image-pull-secrets-binding
spec:
  policyName: warn-on-image-pull-secrets
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - devops-app
  validationActions:
    - Warn
